--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "concurrently": "^4.1.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "glob": "^7.1.4",
     "nodemon": "^1.19.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
+    "@types/glob": "^7.1.1",
     "@types/node": "^12.7.1",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
