--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "allowJs": true,
     "sourceMap": true,
     "outDir": "./dist",
+    "declaration": true,
     "module": "commonjs",
     "noImplicitAny": true,
     "esModuleInterop": true,
