--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
   ],
   "scripts": {
     "dev": "nodemon -e ts -w ./src -x ts-node src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js",
+    "build": "rimraf dist && yarn lint && tsc",
+    "start": "cross-env NODE_ENV=production yarn build && node dist/server.js",
+    "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "cross-env NODE_ENV=test tsc && ava"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.1",
+    "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "glob": "^7.1.4",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "rimraf": "^2.6.3"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
@@ -33,15 +36,10 @@
     "@types/express": "^4.17.0",
     "@types/glob": "^7.1.1",
     "@types/node": "^12.7.1",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
     "ava": "latest",
-    "cross-env": "latest",
-    "eslint": "latest",
-    "eslint-config-standard": "latest",
-    "eslint-plugin-standard": "latest",
     "standard": "latest",
     "ts-node": "^8.3.0",
+    "tslint": "^5.18.0",
     "typescript": "^3.5.3"
   },
   "ava": {
