--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/glob": "^7.1.1",
     "@types/node": "^12.7.1",
     "ava": "latest",
+    "dotenv": "^8.0.0",
     "nodemon": "^1.19.1",
     "standard": "latest",
     "ts-node": "^8.3.0",
