--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 NODE_ENV=development
 APP_PORT=3000
 APP_NAME="TSExpress Starter"
+
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASS=
+DB_NAME=
+DB_SYNC=true
